# git-hooks-1c

./: .gitignore  .travis.yml  README.md  compile.py  copy-files-to-hooks.bat  create-links-in-hooks.bat  pre-commit  pre-commit-1c.bat  pre-commit-1c.ini.sample  pre-commit-1c.py  pre-commit.sample  precommit.py  precommit1c.py  pyproject.toml  requirements.txt  setup.py
git_hooks_1c/: __about__.py  __init__.py  __main__.py  cli.py  clih.py  core.py  create_links_in_hooks.py  install.py  pre-commit-1c.bat  pre-commit.sample  pre_commit.py  pre_commit_1c.py  uninstall.py
githooks1c/: __init__.py  precommit1c.py
githooksfor1c/: __init__.py  createlinksinhooks.py  pre-commit-1c.bat  precommit1c.py
src/git_hooks_1c/: __init__.py  __main__.py  cli.py  core.py  install.py  pre_commit.py  uninstall.py
tests/: test_pre_commit.py
