[tool.pdm]

[project]
authors = [
    {name = "Cujoko", email = "cujoko@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
dependencies = [
    "cjk-commons==3.6.3",
    "fleep==1.0.1",
    "loguru==0.6.0",
    "parse-1c-build==5.15.2",
    "plumbum==1.8.1",
]
description = "Git hooks utilities for 1C:Enterprise"
keywords = ["1c", "git", "pre-commit", "v8reader", "v8unpack", "gcomp"]
license = {text = "MIT"}
name = "git-hooks-1c"
readme = "README.md"
requires-python = ">=3.10"
version = "9.10.2"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
gh1c = "git_hooks_1c.__main__:run"
